# jonahlint

./: .bumpversion.cfg  .coveragerc  .pre-commit-config.yaml  README.md  setup.cfg  test_requirements.txt
.github/workflows/: release.yml
src/jonahlint/: __main__.py  cli.py  comments_getter.py  constants.py  profanity_analyzer.py  profanity_ast_checker.py  profanity_checker.py  profanity_report.py  profanity_visitor.py  sources_finder.py  words_splitter.py
src/jonahlint/resources/: profane_words.txt
tests/: dummy_checker.py  test_profanity_checker.py  test_profanity_visitor.py  test_sources_finder.py  test_words_splitter.py
tests/profanity_analyzer/: case_function_name.py  case_function_variable_name.py  test_comments_getter.py  test_profanity_analyzer.py
tests/profanity_analyzer/cases/: case_assignment.py  case_class_name.py  case_comment.py  case_constant.py  case_function_name.py  case_function_parameter_name.py  case_import.py  case_noqa.py
tests/profanity_visitor/: case_class_name.py  case_function_variable_name.py  test_profanity_visitor.py
