[metadata]
name = jonahlint
author = Sagi Shadur
author_email = saroad2@gmail.com
maintainer = Sagi Shadur
maintainer_email = saroad2@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = Apache License
license_file = LICENSE
description = All your static code analysis tools, in one place
keywords =
    linter
    profanity
    code
    analysis
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
include_package_data = True
package_dir =
    = src
install_requires =
    click >= 7.1.2

[options.packages.find]
where = src
